--- a/light.css
+++ b/light.css
@@ -5,6 +5,33 @@ button {
   width: 15vw;
   max-width: 100%;
   max-height: 100%;
+  margin: 5;
+  font-size: 7vw;  
+  position: relative;
+}
+
+button:hover {
+  border-radius: 30%;
+  text-align: center;
+  height: 17vw;
+  width: 17vw;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+  font-size: 8vw;
+  background-color: lightgray;
+}
+
+button:active {
+  border-radius: 30%;
+  text-align: center;
+  height: 15vw;
+  width: 15vw;
+  max-width: 100%;
+  max-height: 100%;
+  font-size: 7vw;  
+  margin: 5;
+  background-color: lightgray;
 }
 
 #output {
@@ -14,12 +41,13 @@ button {
   font-size: 10vw;  
   max-width: 100%;
   max-height: 100%;
+  margin: auto;
 }
 
 #main-calc {
   margin: auto;
   align-self: center;
-  position: fixed;
+  position: absolute;
   max-width: 100%;
   max-height: 100%;
 }
