--- a/light.css
+++ b/light.css
@@ -5,7 +5,7 @@ button, .unclicked {
   width: 15vw;
   max-width: 100%;
   max-height: 100%;
-  margin: 5;
+  margin: 1vw;
   font-size: 7vw;  
   position: relative;
 }
@@ -31,7 +31,7 @@ button:active, .clicked, button:focus {
   max-width: 100%;
   max-height: 100%;
   font-size: 7vw;  
-  margin: 5;
+  margin: 1vw;
   background-color: lightgray;
 }
 
@@ -51,4 +51,26 @@ button:active, .clicked, button:focus {
   position: absolute;
   max-width: 100%;
   max-height: 100%;
+}
+
+.add-button {
+  position: fixed;
+  top: 1px;
+  left: 1px;
+  height: 8vw;
+  width: 40vw;
+  margin: 5;
+  border-radius: 4vw;
+  font-size: 4vw;
+}
+
+.add-button:hover, .add-button:focus {
+  position: fixed;
+  top: 1px;
+  left: 1px;
+  margin: 5;
+  height: 8vw;
+  width: 40vw;
+  border-radius: 4vw;
+  font-size: 4vw;
 }
