--- a/light.css
+++ b/light.css
@@ -37,7 +37,7 @@ button:active, .clicked, button:focus {
 
 #output {
   text-align: right;
-  width: 63vw;
+  width: 71vw;
   height: 10vw;
   font-size: 10vw;  
   max-width: 100%;
@@ -49,8 +49,8 @@ button:active, .clicked, button:focus {
   margin: auto;
   align-self: center;
   position: absolute;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 100vmin;
+  max-height: 100vmin;
 }
 
 .add-button {
@@ -73,4 +73,8 @@ button:active, .clicked, button:focus {
   width: 40vw;
   border-radius: 4vw;
   font-size: 4vw;
+}
+
+#header {
+  font-size: 7vh;
 }
