--- a/dark.css
+++ b/dark.css
@@ -33,7 +33,7 @@ button:active, .clicked, button:focus {
   max-width: 14vmin;
   max-height: 14vmin;
   font-size: 7vmin;  
-  margin: 2vmin;
+  margin: 1vmin;
   background-color: #555555;
 }
 
@@ -79,7 +79,7 @@ button:active, .clicked, button:focus {
   font-size: 4vw;
 }
 
-#header {
+#header, p {
   font-size: 7vh;
   color: white;
 }
@@ -94,4 +94,72 @@ body {
   max-width: 14vmin;
   max-height: 14vmin;
   margin: 2vmin;
+}
+
+#forkongithub a {
+  background:white;
+  color:black;
+  text-decoration:none;
+  font-family:arial,sans-serif;
+  text-align:center;
+  font-weight:bold;
+  padding:5px 40px;
+  font-size:1rem;
+  line-height:2rem;
+  position:relative;
+  transition:0.5s;
+}
+
+#forkongithub a:hover {
+  background:purple;
+  color:white;
+}
+
+#forkongithub a::before,#forkongithub a::after {
+  content:"";
+  width:100%;
+  display:block;
+  position:absolute;
+  top:1px;
+  left:0;
+  height:1px;
+  background:black;
+}
+
+#forkongithub a::after {
+  bottom:1px;
+  top:auto;
+}
+
+@media screen and (min-width:800px) {
+  #forkongithub {
+    position:absolute;
+    display:block;
+    top:0;
+    right:0;
+    width:200px;
+    overflow:hidden;
+    height:200px;
+    z-index:9999;
+  }
+  
+  #forkongithub a {
+    width:200px;
+    position:absolute;
+    top:60px;
+    right:-60px;
+    transform:rotate(45deg);
+    -webkit-transform:rotate(45deg);
+    -ms-transform:rotate(45deg);
+    -moz-transform:rotate(45deg);
+    -o-transform:rotate(45deg);
+    box-shadow:4px 4px 10px rgba(0,0,0,0.8);
+  }
+}
+
+p {
+  color: white;
+  font-size: 4vmin;
+  position:fixed;
+  bottom: 1px;
 }
